--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "mysql2": "^2.2.5",
     "rand-token": "^1.0.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
