--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "rand-token": "^1.0.1",
     "winston": "^3.3.3",
