--- a/node-api/Dockerfile
+++ b/node-api/Dockerfile
@@ -9,3 +9,23 @@ ADD src /node-api/src
 #RUN npm install babel -g
 #RUN npm install --save-dev gulp-babel babel-preset-es2015
 #RUN npm install nodemon -g
+
+FROM node:12.14-alpine
+
+ENV TZ Asia/Seoul
+RUN	apk update && apk upgrade && \
+	apk add --update tzdata && \
+	cp /usr/share/zoneinfo/${TZ} /etc/localtime && \
+	echo "${TZ}" > /etc/timezone
+
+WORKDIR /usr/src/app
+
+COPY . .
+
+RUN rm -rf node_modules
+
+RUN yarn
+RUN yarn build
+
+EXPOSE 80
+CMD [ "yarn", "start:prod" ]
