--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,38 +1,38 @@
-image: node:latest
+# image: node:latest
 
-stages:
-  - test
-  - build
-  - deploy
+# stages:
+#   - test
+#   - build
+#   - deploy
 
-cache:
-  paths:
-    - node-api/node_modules/
+# cache:
+#   paths:
+#     - node-api/node_modules/
 
 # include:
 #   - template: Deploy-ECS.gitlab-ci.yml
 # include:
 #   template: Serverless.gitlab-ci.yml
 
-test:
-  script:
-    - cd node-api
-    - npm install
-    - cd /bin/www
-    - node www
+# test:
+#   script:
+#     - cd node-api
+#     - npm install
+#     - cd /bin/www
+#     - node www
 
-build:
-  extends: .deploy-ecs:build:image  
+# build:
+#   extends: .deploy-ecs:build:image  
 
-deploy_staging:
-  stage: deploy
-  extends: .deploy-ecs:deploy:image
+# deploy_staging:
+#   stage: deploy
+#   extends: .deploy-ecs:deploy:image
 
-deploy_prod:
-  stage: deploy
-  extends: .deploy-ecs:deploy:image
-  environment:
-    name: production
-  when: manual
-  only:
-  - master
+# deploy_prod:
+#   stage: deploy
+#   extends: .deploy-ecs:deploy:image
+#   environment:
+#     name: production
+#   when: manual
+#   only:
+#   - master
