--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,52 @@
-flask-api:
+version: "3.3"
+
+services:
+  flask-api:
+    build:
+      context: ./flask-api
+      dockerfile: ./Dockerfile
     restart: on-failure:10
-    build: ./flask-api
     expose:
       - "5000"
+    environment:
+      - LC_ALL=C.UTF-8
+      - LANG=C.UTF-8
     container_name: flask-api
+    tty: true
+    stdin_open: true
 
-node-api:
-restart: on-failure:10
-build: ./node-api
-expose:
-    - "3000"
-ports:
-    - "5858:5858"
-#command: pm2 start /node-api/node-api.json --no-daemon
-command: node --debug /node-api/bin/node-api.js
-#command: node-debug /node-api/bin/node-api.js
-#command: nodemon --debug /node-api/node-api.js --watch /node-api
-container_name: node-api
+  node-api:
+    build:
+      context: ./node-api
+      dockerfile: ./Dockerfile
+    restart: on-failure:10
+    expose:
+        - "3000"
+    ports:
+        - "8080:8080"
+    #command: pm2 start /node-api/node-api.json --no-daemon
+    #command: node --debug /node-api/bin/node-api.js
+    #command: node-debug /node-api/bin/node-api.js
+    #command: nodemon --debug /node-api/node-api.js --watch /node-api
+    container_name: node-api
+    tty: true
+    stdin_open: true
+    environment:
+      - NODE_ENV=development
 
-nginx:
-restart: always
-build: ./nginx/
-ports:
-    - "80:80"
-links:
-    # nginx has to link to flask-api (not vice-versa) so that nginx/sites-enabled/default has access to flask-api by service name (acts as host dns).
-    #  each docker container has a seperate ip address below the docker-machine host, so you have to link containers to correctly pass to upstream flask port
-    - flask-api:flask-api
-    - node-api:node-api
-container_name: nginx
+  nginx:
+    restart: always
+    build:
+      context: ./nginx
+      dockerfile: ./Dockerfile
+    ports:
+        - "80:80"
+    links:
+        # nginx has to link to flask-api (not vice-versa) so that nginx/sites-enabled/default has access to flask-api by service name (acts as host dns).
+        #  each docker container has a seperate ip address below the docker-machine host, so you have to link containers to correctly pass to upstream flask port
+        - flask-api:flask-api
+        - node-api:node-api
+    container_name: nginx
+    tty: true
+    stdin_open: true
+
