--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     container_name: flask-api
     tty: true
     stdin_open: true
+    networks:
+      - mindnet
 
   node-api:
     build:
@@ -21,9 +23,7 @@ services:
       dockerfile: ./Dockerfile
     restart: on-failure:10
     expose:
-        - "3000"
-    ports:
-        - "8080:8080"
+        - "8080"
     #command: pm2 start /node-api/node-api.json --no-daemon
     #command: node --debug /node-api/bin/node-api.js
     #command: node-debug /node-api/bin/node-api.js
@@ -31,6 +31,8 @@ services:
     container_name: node-api
     tty: true
     stdin_open: true
+    networks:
+      - mindnet
     environment:
       - NODE_ENV=development
 
@@ -46,7 +48,14 @@ services:
         #  each docker container has a seperate ip address below the docker-machine host, so you have to link containers to correctly pass to upstream flask port
         - flask-api:flask-api
         - node-api:node-api
+    # command: sh /scripts/entrypoint.sh
     container_name: nginx
     tty: true
     stdin_open: true
+    networks:
+      - mindnet
+
+networks:
+  mindnet:
+    driver: bridge
 
