--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -6,7 +6,8 @@ EXPOSE 80
 COPY ./scripts/ /scripts
 RUN chmod +x /scripts/*.sh
 
-COPY ./user.conf.d/ /etc/nginx/user.conf.d/ 
+RUN rm -f /etc/nginx/conf.d/*
+COPY ./user.conf.d/ /etc/nginx/user.conf.d/
 
-CMD ["/bin/bash"]
-# CMD ["/bin/bash", "/scripts/entrypoint.sh"]
+# CMD ["/bin/bash"]
+CMD ["/bin/bash", "/scripts/entrypoint.sh"]
