--- a/nginx/user.conf.d/nginx.conf
+++ b/nginx/user.conf.d/nginx.conf
@@ -15,13 +15,7 @@ server {
     server_name localhost;
     charset utf-8;
 
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection 'upgrade';
-    proxy_set_header Host $host;
-    proxy_cache_bypass $http_upgrade;
-
-    location ^~/node-api{
+    location / {
         proxy_pass http://node_server;
     }
 }
