Chnage port number

--- a/nginx/user.conf.d/nginx.conf
+++ b/nginx/user.conf.d/nginx.conf
@@ -10,10 +10,12 @@ upstream node_server{
 }
 
 server {
-    listen 80;
+    listen 5678;
     #server_name 192.168.90.100;
-    server_name localhost;
+    #server_name localhost;
+    server_name 202.30.30.3;
     charset utf-8;
+
 
     location / {
         proxy_pass http://node_server;
