--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   google_nav_bar: ^5.0.5
   line_icons: ^2.0.1
   badges: ^2.0.1
+  http: ^0.13.3
+  json_annotation: ^4.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -35,7 +37,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.0.6
+  json_serializable: ^4.1.3
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
