--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,30 @@
 stages:
-  - triggers
+  - test
 
-trigger_flutter:
-  stage: triggers
-  trigger:
-    include: gitlab-ci/.gitlab-ci-flutter.yml
-  rules:
-    - changes:
-        - app/*
+variables:
+  INNER_NAME: "RHCSKY"
 
-trigger_nodejs:
-  stage: triggers
-  trigger:
-    include: gitlab-ci/.gitlab-ci-nodejs.yml
-  rules:
-    - changes:
-        - node-api/*
+test_flutter:
+  tags:
+    - runner
+  stage: test
+  script:
+    - echo INNER_NAME=$INNER_NAME
 
-trigger_flask:
-  stage: triggers
-  trigger:
-    include: gitlab-ci/.gitlab-ci-flask.yml
-  rules:
-    - changes:
-        - flask-api/*
+test_nodejs:
+  tags:
+    - runner
+  stage: test
+  script:
+    - echo INNER_NAME=$INNER_NAME
+
+test_flask:
+  tags:
+    - runner
+  stage: test
+  before_script:
+    - cd flask-api
+    - export PATH=$PATH:/opt/conda/bin
+    - python -m pip install -r requirements.txt
+  script:
+    - echo INNER_NAME=$INNER_NAME
