--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -40,8 +40,8 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.0.6
   json_serializable: ^4.1.3
-  flutter_launcher_icons: ^0.9.0
-#  flutter_native_splash: ^1.2.0
+#  flutter_launcher_icons: ^0.9.0
+  flutter_native_splash: ^1.2.0
 
 flutter:
   uses-material-design: true
@@ -57,10 +57,10 @@ flutter:
 
 flutter_native_splash:
   color: "#ffffff"
-  image: assets/logo.png
+  image: assets/logo_with_name.png
 
   color_dark: "#737373"
-  image_dark: assets/logo.png
+  image_dark: assets/logo_with_name.png
 
   android: true
   ios: true
