--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -41,7 +41,7 @@ dev_dependencies:
   build_runner: ^2.0.6
   json_serializable: ^4.1.3
 #  flutter_launcher_icons: ^0.9.0
-  flutter_native_splash: ^1.2.0
+#  flutter_native_splash: ^1.2.0
 
 flutter:
   uses-material-design: true
