--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.13.3
   json_annotation: ^4.0.1
   flutter_secure_storage: ^4.2.0
+  flutter_multi_formatter: ^2.3.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
