--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   json_annotation: ^4.0.1
   flutter_secure_storage: ^4.2.0
   flutter_multi_formatter: ^2.3.1
+  animations: ^1.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
