--- a/node-api/package.json
+++ b/node-api/package.json
@@ -16,6 +16,8 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^6.6.3",
     "rand-token": "^1.0.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
