--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   flutter_multi_formatter: ^2.3.1
   animations: ^1.1.2
+  webview_flutter: ^2.0.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
