--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^1.0.0-dev.8
+  extended_image: ^4.1.0
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/archive_basic.png
+    - assets/loading.gif
   fonts:
     - family: FugazOne
       fonts:
