--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_slidable: ^1.0.0-dev.8
   extended_image: ^4.1.0
+  smart_select: ^4.3.2
 
 dev_dependencies:
   flutter_test:
