--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -35,12 +35,11 @@ dependencies:
   animations: ^1.1.2
   webview_flutter: ^2.0.10
   async: ^2.6.1
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: ^1.0.0-dev.8
   extended_image: ^4.1.0
   smart_select: ^4.3.2
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
