--- a/nginx/user.conf.d/nginx.conf
+++ b/nginx/user.conf.d/nginx.conf
@@ -10,9 +10,10 @@ upstream node_server{
 }
 
 server {
-    listen 5678;
-    server_name 202.30.30.3;
+    listen 80;
+    server_name 3.38.43.130;
     charset utf-8;
+    # proxy_pass http://localhost:8000;
 
 
     location / {
