--- a/flask-api/Dockerfile
+++ b/flask-api/Dockerfile
@@ -4,7 +4,8 @@ FROM ubuntu:18.04
 #ENV PATH=/opt/conda/bin:$PATH
 
 RUN apt-get update && apt-get -y upgrade && apt-get install -y python3-pip
-RUN python3 -m pip install flask wget xmltodict flask-cors flask_restx pororo
+RUN python3 -m pip install flask wget xmltodict flask-cors flask_restx 
+RUN python3 -m pip install pororo
 
 WORKDIR /root
 # COPY . .
