--- a/flask-api/Dockerfile
+++ b/flask-api/Dockerfile
@@ -6,7 +6,8 @@ ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
 RUN apt-get update && apt-get -y upgrade && apt-get install -y python3-pip
-RUN python3 -m pip install flask wget xmltodict flask-cors flask_restx
+RUN python3 -m pip install --upgrade pip
+RUN python3 -m pip install flask wget xmltodict flask-cors flask_restx pororo fasttext
 
 WORKDIR /root
 
