--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   package_info: ^2.0.2
   ios_utsname_ext: ^2.0.0
   syncfusion_flutter_charts: ^19.2.60
+  kakao_flutter_sdk: ^0.8.1
+  dio: ^4.0.0
+  shared_preferences: ^2.0.5
+  platform: ^3.0.0
+  package_info_plus: ^1.0.4
 
 dev_dependencies:
   flutter_test:
