--- a/flask-api/Dockerfile
+++ b/flask-api/Dockerfile
@@ -7,7 +7,7 @@ ENV LANG=C.UTF-8
 
 RUN apt-get update && apt-get -y upgrade && apt-get install -y python3-pip
 RUN python3 -m pip install --upgrade pip
-RUN python3 -m pip install flask wget xmltodict flask-cors flask_restx pororo fasttext pymysql sklearn numpy
+RUN python3 -m pip install flask wget xmltodict flask-cors flask_restx pororo fasttext pymysql sklearn numpy pandas
 
 WORKDIR /root
 
