--- a/node-api/Dockerfile
+++ b/node-api/Dockerfile
@@ -16,4 +16,4 @@ ENV NODE_ENV production
 RUN npm install
 
 EXPOSE 3000
-ENTRYPOINT [ "npm", "run", "start" ]
+ENTRYPOINT [ "npm", "run", "nodemon" ]
