--- a/app/findmap/pubspec.yaml
+++ b/app/findmap/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
     - assets/archive_basic.png
     - assets/loading.gif
     - assets/social/
+    - assets/search/
   fonts:
     - family: FugazOne
       fonts:
