--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,9 @@ test_nodejs:
     - merge_requests
 
 test_flask:
+  image:
+    name: ubuntu:18.04
+    entrypoint: [ '/bin/bash', '-c' ]
   tags:
     - runner
   stage: test
