--- a/node-api/package.json
+++ b/node-api/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "loader": "^2.1.1",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
