--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - test
+  - deploy
 
 variables:
   INNER_NAME: "RHCSKY"
@@ -27,16 +28,36 @@ test_nodejs:
     - merge_requests
 
 test_flask:
+  image:
+    name: pytorch/pytorch:latest
   tags:
     - runner
   stage: test
   before_script:
     - cd flask-api
-    - export PATH=$PATH:/opt/conda/bin
-    - python -m pip install -r requirements.txt
+    - export PATH=/opt/conda/bin:$PATH
+    # - python3 -m pip install -r requirements.txt
   script:
     - echo INNER_NAME=$INNER_NAME
   only:
     - main
     - dev
     - merge_requests
+    
+deploy_to_server:
+  stage: deploy
+  before_script:
+  - 'command -v ssh-agent >/dev/null || ( apk add --update openssh )' 
+  - eval $(ssh-agent -s)
+  - echo "$SSH_PRIVATE_KEY" | ssh-add -
+  - mkdir -p ~/.ssh
+  - chmod 700 ~/.ssh
+  - ssh-keyscan $VM_IPADDRESS >> ~/.ssh/known_hosts
+  - chmod 644 ~/.ssh/known_hosts
+  script:
+  - ssh $SSH_USER@$VM_IPADDRESS "hostname && sh git_pull.sh"
+  artifacts:
+    paths:
+    - public
+  only:
+  - main
